Fix Bug 127749: kopete freezes on desktop right click

BUG: 127749

I've taken the patch from jaguarwan, and added some check to assure good reentrency due to the call to the evebt loop.
Please have a test.

svn path=/branches/kopete/0.12/kopete/; revision=549156